* Thu Jul 11 2012 <gerbier@users.sourceforge.net> 2.8
- can handle SUGGESTS/ENHANCES rpm tag
- add --cap-from-fs/cap-from-db options
- build rpmrebuild-version.tar.gz to allow rpmbuild -tb work

* Thu Jun 06 2012 <gerbier@users.sourceforge.net> 2.7
- patch from Andreas Kainz for package file checking
- add new unset_tag plugin
- add support for rpm version 5 (mandriva)
- fix -l / --list-plugin option
- add support of posix capability
- add new un_prelink plugin (suggest from Han Holl)
- add RPMREBUILD_OPTS environment variable
- fix problem with different architecture (build 32bit on 64bits)
- fix bad arch on gpg-pubkey packages

* Tue Jul 12 2011 <gerbier@users.sourceforge.net> 2.6
- fix bug when working on source packages, ghost files

* Fri Apr 15 2011 <gerbier@users.sourceforge.net> 2.5
- add -5/-l options in man pages
- Added support for obsolete version and flags (bugfix by Valery Reznic)
- shell compatibility (mkdir) for AIX : use -p option instead --parents
- new Mkdir_p function to check for mkdir result
- apply patch from ndyankov : support for broken symlinks
- specfile will allow build package for rpm version 4 or 3

* Fri Dec 11 2009 <gerbier@users.sourceforge.net> 2.4
- add -l / --list-plugin option

* Tue Nov 12 2009 <valery_reznic@users.sourceforge.net>
- add -5 / --md5-compat-digest option

* Wed Jan 09 2009 <gerbier@users.sourceforge.net> 2.3
- release version 2.3

* Tue Dec 16 2008 <valery_reznic@users.sourceforge.net>
- fix a problem: installation test failed when repackaged rpm file (with -p)

* Tue Dec 16 2008 <valery_reznic@users.sourceforge.net>
- fix for rpm 4.6 (fedora 10), that ignore BuildRoot in the spec file flag

* Wed Dec 05 2008 <gerbier@users.sourceforge.net> 
- do not use popt any more

* Wed Aug 06 2008 <gerbier@users.sourceforge.net> 2.2.3-1
- fix a problem with new rpm security on mandriva (defaultbuildroot)

* Mon Apr 28 2008 <gerbier@users.sourceforge.net> 2.2.2-1
- fix a bug when working on package file with path
