@@ -1,3 +1,6 @@
+* Sun Jan 13 2013 <valery_reznic@users.sourceforge.net> 2.9
+- fix to work with rpm 4.10 (Fedora 18) - error: incorrect format: invalid field width
+
 * Thu Jul 11 2012 <gerbier@users.sourceforge.net> 2.8
 - can handle SUGGESTS/ENHANCES rpm tag
 - add --cap-from-fs/cap-from-db options
